Minor updates to work in the texmf tree of the IIS.
- Correct the image paths in order to work in the texmf tree of the IIS.

--- a/beamerinnerthemeiis.sty
+++ b/beamerinnerthemeiis.sty
@@ -36,14 +36,14 @@
     \vfill%
     {\usebeamerfont{author}{\small\insertauthor}}%
     \vfill%
-    \includegraphics[width=2cm]{./eth_logo}\\%
+    \includegraphics[width=2cm]{eth_logo}\\%
     \usebeamerfont{institute}{\insertinstitute}%
   \end{flushright}
   %% Place the wafer image (either the PNG version or the JPG version,
   %% depending on the theme options specified).
   \begin{textblock}{12.8}(\@waferleft,\@wafertop)%
-    \if@waferpng\includegraphics[width=\@waferwidth\linewidth]{./wafer.png}%
-    \else\includegraphics[width=\@waferwidth\linewidth]{./wafer.jpg}%
+    \if@waferpng\includegraphics[width=\@waferwidth\linewidth]{wafer.png}%
+    \else\includegraphics[width=\@waferwidth\linewidth]{wafer.jpg}%
     \fi%
   \end{textblock}%
 }
