Update *.ins file.
- Update the installation file (*.ins).

--- a/beamercolorthemeiis.sty
+++ b/beamercolorthemeiis.sty
@@ -34,5 +34,6 @@
 
 %% Specify the colors of the alert box.
 \setbeamercolor{alerted text}{fg=eth7}
-\setbeamercolor{block title alerted}{use=alerted text,fg=white,bg=alerted text.fg}
+\setbeamercolor{alerted block}{fg=eth7}
+\setbeamercolor{block title alerted}{use=alerted block,fg=white,bg=alerted block.fg}
 \setbeamercolor{block body alerted}{parent=normal text,use=block title alerted,bg=block title alerted.bg!20!bg}
