--- a/new/beamerthemeiis.dtx
+++ b/new/beamerthemeiis.dtx
@@ -70,6 +70,7 @@
 % \DoNotIndex{\@waferpngfalse,\@waferpngtrue,\if@waferpng,\mode,\newif,\ProcessOptions}
 % \DoNotIndex{\RequirePackage,\setlength,\TPHorizModule,\TPVertModule}
 % \DoNotIndex{\usecolortheme,\usefonttheme,\useinnertheme,\useoutertheme}
+% \DoNotIndex{\definecolor,\setbeamercolor}
 %
 % \newcommand{\latexcls}[1]{\textsf{#1}}
 % \newcommand{\latexsty}[1]{\textsf{#1}}
@@ -185,6 +186,95 @@
 %    \end{macrocode}
 % \iffalse
 %</beamerthemeiis>
+% \fi
+%
+%
+% \subsection{\file{beamercolorthemeiis.sty}}
+%
+% \iffalse
+%<*beamercolorthemeiis>
+% \fi
+%
+% Ensure that the following changes are valid for all
+% \emph{presentation} modes of \latexcls{beamer} (i.e., not for the
+% \emph{article} mode).
+%    \begin{macrocode}
+\mode<presentation>
+%    \end{macrocode}
+%
+% Declare the ETH corporate design
+% colors\footnote{\url{https://www.ethz.ch/services/en/service/communication/corporate-design/colour.html}} based on RGB values.
+%    \begin{macrocode}
+\definecolor{eth1}{RGB}{31,64,122}
+\definecolor{eth2}{RGB}{72,90,44}
+\definecolor{eth3}{RGB}{18,105,176}
+\definecolor{eth4}{RGB}{114,121,28}
+\definecolor{eth5}{RGB}{145,5,105}
+\definecolor{eth6}{RGB}{111,111,100}
+\definecolor{eth7}{RGB}{168,50,45}
+\definecolor{eth8}{RGB}{0,122,150}
+\definecolor{eth9}{RGB}{149,96,19}
+\definecolor{eth10}{RGB}{140,182,60}
+%    \end{macrocode}
+%
+% Declare the main color of the theme.
+%    \begin{macrocode}
+\setbeamercolor*{structure}{fg=eth1}
+%    \end{macrocode}
+%
+% Derive the color palettes for the outer theme from the main color.
+%    \begin{macrocode}
+\setbeamercolor{palette primary}{%
+  use=structure,fg=white,bg=structure.fg!40!white}
+\setbeamercolor{palette secondary}{%
+  use=structure,fg=white,bg=structure.fg!60!white}
+%    \end{macrocode}
+%
+% Note that the following color is used for the headers and footers.
+%    \begin{macrocode}
+\setbeamercolor{palette tertiary}{%
+  use=structure,fg=white,bg=structure.fg!90!white}
+\setbeamercolor{palette quaternary}{%
+  fg=white,bg=black}
+%    \end{macrocode}
+%
+% Specify the colors of the standard block.
+%    \begin{macrocode}
+\setbeamercolor{block title}{%
+  parent=normal text,fg=white,bg=eth1}
+\setbeamercolor{block body}{%
+  parent=normal text,use=block title,bg=block title.bg!20!bg}
+%    \end{macrocode}
+%
+% Specify the colors of the example block.
+%    \begin{macrocode}
+\setbeamercolor{example text}{fg=eth4}
+\setbeamercolor{block title example}{%
+  use=example text,fg=white,bg=example text.fg}
+\setbeamercolor{block body example}{%
+  parent=normal text,use=block title example,%
+  bg=block title example.bg!20!bg}
+%    \end{macrocode}
+%
+% Specify the colors of the alert box.
+%    \begin{macrocode}
+\setbeamercolor{alerted text}{fg=eth7}
+\setbeamercolor{alerted block}{fg=eth7}
+\setbeamercolor{block title alerted}{%
+  use=alerted block,fg=white,bg=alerted block.fg}
+\setbeamercolor{block body alerted}{%
+  parent=normal text,use=block title alerted,%
+  bg=block title alerted.bg!20!bg}
+%    \end{macrocode}
+%
+% Ensure that all subsequent commands will again be valid for all
+% modes of the \latexcls{beamer} class.
+%    \begin{macrocode}
+\mode<all>
+%    \end{macrocode}
+%
+% \iffalse
+%</beamercolorthemeiis>
 % \fi
 %
 % \Finale
