--- a/example.tex
+++ b/example.tex
@@ -17,13 +17,15 @@
 
 %%%%% IIS theme-specific settings.
 \usetheme[%
-% waferpng %% Use the PNG version of the wafer image on the title slide (increases file size!).
+% waferpng,   %% Use the PNG version of the wafer image on the title slide (increases file size!).
+% showheader, %% Show the header line containing the section navigation.
+% hidefooter, %% Hide the footer containing the affiliation and the author's name.
 ]{iis}
 
 %% (Optional) Scale the wafer image on the title page.
-\setwaferwidth{0.5} % In percent of the \linewidth (default: 0.5)
-\setwaferleft{0.0}  % In centimeter from the top-left corner of the slide (default: 0.0)
-\setwafertop{5.8}   % In centimeter from the top-left corner of the slide (default: 5.8)
+% \setwaferwidth{0.5} % In percent of the \linewidth (default: 0.5)
+% \setwaferleft{0.0}  % In centimeter from the top-left corner of the slide (default: 0.0)
+% \setwafertop{5.8}   % In centimeter from the top-left corner of the slide (default: 5.8)
 
 %% (Optional) Change the margin of the text on the slides (default =
 %% 2em). Note that we currently do not adapt the indentation of the
@@ -32,7 +34,7 @@
 
 %% You may change the appearance of the navigation symbols (shown at
 %% the bottom right of each slide) using any of the following lines.
-% \setbeamertemplate{navigation symbols}{} %% Disable navigation symbols
+\setbeamertemplate{navigation symbols}{} %% Disable navigation symbols
 % \setbeamertemplate{navigation symbols}[vertical] %% Vertically organize the navigation symbols.
 % \setbeamertemplate{navigation symbols}[only frame symbol] %% Only show frame symbols
 
@@ -59,20 +61,20 @@
 %%%%%                                                                %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\title{\textbf{\texttt{iis}} -- The \LaTeX{} \latexcls{beamer} Theme of the Integrated Systems Laboratory}
+\title{\textbf{\texttt{iis}} - The \LaTeX{} \latexcls{beamer} Theme of the Integrated Systems Laboratory}
 \subtitle{An easy to use template}
 \date{Zurich, May 2015}
 
 %% Determine the authors of the work.
 \author[%
-  Doe %% Used for the footline.
+  M. Muehlberghuber%% Used for the footline.
 ]{%
   \textbf{Michael Muehlberghuber}%% The author giving the presentation.
   %% Any further authors should come in here.
 }
 
 \institute[%
-  Integrated Systems Laboratory%% The short version of the institute will be used for the footer.
+  IIS%% The short version of the institute will be used for the footer.
 ]{Integrated Systems Laboratory}
 
 
